点击底部选项卡时判断是否登录。

--- a/kankan/pages/login/emai_summate.html
+++ b/kankan/pages/login/emai_summate.html
@@ -6,6 +6,11 @@
 		<title>email_summate</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<style>
+			#form1 label {
+				font-size: smaller;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -19,7 +24,7 @@
 	        	<div class="mui-input-group">
 					<div class="mui-input-row">
 						<label for="email" class="lang" data-locale="email"></label>
-						<input id='email' name="email" type="email" class="mui-input lang" data-locale="please-input-email">
+						<input id='email' name="email" type="email" class="mui-input mui-input-clear lang" data-locale="please-input-email">
 					</div>
 				</div>
 				<!-- send verification code button -->
