--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -185,13 +185,13 @@
 		<script type="text/javascript" src="../../js/app.js"></script>
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="../../js/language.js"></script>
-		<script type="text/javascript" src="../../js/picker/mui.picker.js"></script>
-		<script type="text/javascript" src="../../js/picker/mui.poppicker.js"></script>
-		<script type="text/javascript" src="../../js/picker/city.data.js"></script>
 		<script type="text/javascript" src="../../js/sha1.js"></script>
 		<script type="text/javascript" src="../../js/sha256.js"></script>
 		<script type="text/javascript" src="../../js/md5.js"></script>
 		<script type="text/javascript" src="../../js/common.js"></script>
+		<script type="text/javascript" src="../../js/picker/mui.picker.js"></script>
+		<script type="text/javascript" src="../../js/picker/mui.poppicker.js"></script>
+		<script type="text/javascript" src="../../js/picker/city.data.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			(function(mui, doc) {
 				mui.init();
@@ -252,6 +252,26 @@
 					var regBtn = doc.getElementById('reg');
 					regBtn.addEventListener('tap', function(event) {
 						console.log("click regBtn");
+						var email = doc.getElementById('email').value.trim();
+						if (email == "") {
+							plus.nativeUI.toast(TextMessage.emailnull);
+							return;
+						}
+						var username = doc.getElementById('username').value.trim();
+						if (username == "") {
+							plus.nativeUI.toast(TextMessage.username_null);
+							return;
+						}
+						var city = doc.getElementById('city').getAttribute('data-val');
+						if (city == "") {
+							plus.nativeUI.toast(TextMessage.addressnull);
+							return;
+						}
+						var verificationCode = doc.getElementById('verificationCode').value.trim();
+						if (verificationCode == "") {
+							plus.nativeUI.toast(TextMessage.codenull);
+							return;
+						}
 						var password = doc.getElementById('password').value.trim();
 						if (6 > password.length || password.length > 16) {
 							plus.nativeUI.toast(TextMessage.password_error);
@@ -262,6 +282,7 @@
 							plus.nativeUI.toast(TextMessage.confirmPwd_error);
 							return;
 						}
+						
 						var waiting = plus.nativeUI.showWaiting();
 						var params = {};
 						params[Api.Params.email] = doc.getElementById('email').value.trim();
