--- a/kankan/pages/login/forget_password.html
+++ b/kankan/pages/login/forget_password.html
@@ -64,7 +64,7 @@
 			<span class="lang" data-locale="forget_password_msg"></span>
 			<form class="mui-input-group">
 				<div class="mui-input-row">
-					<label class="lang" data-locale="email"></label>
+					<label for="email" class="lang" data-locale="email" style="font-size: smaller;"></label>
 					<input id='email' type="email" class="mui-input-clear mui-input lang" data-locale="please-input-email">
 				</div>
 			</form>
