--- a/kankan/pages/setting/setting.html
+++ b/kankan/pages/setting/setting.html
@@ -64,7 +64,7 @@
 				        <li class="mui-table-view-cell">
 				            <a class="mui-navigate-right lang" href="#forbidon" data-locale="forbidontext"></a>
 				        </li>
-				        <li class="mui-table-view-cell">
+				        <li class="mui-table-view-cell" style="display: none;">
 				            <a class="mui-navigate-right lang" href="#moneyCalculat" data-locale="moneycla"></a>
 				        </li>
 				        <li class="mui-table-view-cell">
