--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -14,22 +14,22 @@
 			<a class="mui-icon-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title lang" data-locale="det_procoment"></h1>
 		</header>
-		<div class="mui-content ka_mainbox">
+		<div class="mui-content ka_mainbox" style="position: absolute;">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell ka_userbox" id="comments">
 				</li>
 			</ul>
 		</div>
-			<nav class="mui-bar mui-bar-tab">
-				<form id="commodity_comments" name="commodity_comments" method="post">
-					<div class="ka_sendmesbox ka_userbox">
-						<input  type="hidden" id="commodity_id" name="commodity_id" />
-						<textarea type="text" class="ka_sendcontent" maxlength="300"  rows="1" id="leave_msg_detail" name="leave_msg_detail" ></textarea>
-						<button type="button" class="mui-btn ka_sendbutton lang"  data-locale="contentsend" onclick="formSubmit()"></button>
-					</div>
-				</form>
-			</nav>
-
+		<div class="" style="position: fixed;z-index: 999;width: 100%; bottom:0;padding-bottom: 1em;">
+			<form id="commodity_comments" name="commodity_comments" method="post">
+				<div class="ka_sendmesbox ka_userbox">
+					<input  type="hidden" id="commodity_id" name="commodity_id"/>
+					<textarea type="text" class="ka_sendcontent" maxlength="300"  rows="1" id="leave_msg_detail" name="leave_msg_detail" onfocus="keyboard()"></textarea>
+					<button type="button" class="mui-btn ka_sendbutton lang"  data-locale="contentsend" onclick="formSubmit()"></button>
+				</div>
+			</form>
+		</div>
+		
 		<script src="../../../js/mui.min.js"></script>
 		<script src="../../../js/jquery-3.2.0.min.js"></script>
 		<script src="../../../js/language.js"></script>
@@ -37,6 +37,11 @@
 		<script src="../../../js/common.js"></script>
 		<script type="text/javascript">
 			mui.init();
+			//var keyset=self.setInterval("keyboard()",50);
+			function keyboard(){
+				// window.scrollTo(0,467);
+				//alert("tan");
+			}
 			window.addEventListener('comid', function(event) {
 				var id = event.detail.id;
 				//var id="19";
@@ -67,7 +72,7 @@
 					ng: function(data) {
 						Log.d(data);
 						if(data == "2001") {
-							var htmlnull='<p id="null" >'+TextMessage.datanull+'</p>';
+							var htmlnull='<p id="null" >'+TextMessage.commentsnull+'</p>';
 							$("#comments").html(htmlnull);
 						}
 					}
@@ -104,12 +109,18 @@
 			function formSubmit(){
 				var contents=document.commodity_comments.leave_msg_detail.value;
 				if(contents==""){
-					alert(TextMessage.commenttestnull);
+					mui.toast(TextMessage.commenttestnull, {
+						duration: 'long',
+						type: 'div'
+					});
 					document.commodity_comments.leave_msg_detail.focus();
 					return false;
 				}
 				if(contents.length>300){
-					alert(TextMessage.commenttestlength);
+					mui.toast(TextMessage.commenttestlength, {
+						duration: 'long',
+						type: 'div'
+					});
 					document.commodity_comments.leave_msg_detail.focus();
 					return false;
 				}
