--- a/kankan/pages/setting/question.html
+++ b/kankan/pages/setting/question.html
@@ -114,20 +114,24 @@
 					"images[3]":img3
 				};
 				mui.plusReady(function() {
-					Repository.User.addComplaint(params2,{
-						ok: function(data) {
-							console.log("success");
-							mui.toast(TextMessage.requiresuccess, {
-								duration: 'long',
-								type: 'div'
-							});
-							mui.back();
-						},
-						ng: function(data) {
-							console.log("error:"+data);
-							Log.d(data);
-						}
-					});
+					if (!Repository.User.isEmptyEmail()) {
+						 return;
+					} else {
+						Repository.User.addComplaint(params2,{
+							ok: function(data) {
+								console.log("success");
+								mui.toast(TextMessage.requiresuccess, {
+									duration: 'long',
+									type: 'div'
+								});
+								mui.back();
+							},
+							ng: function(data) {
+								console.log("error:"+data);
+								Log.d(data);
+							}
+						});
+					}
 				});
 			}
 			function clearallval(){
