--- a/kankan/pages/login/forget_password.html
+++ b/kankan/pages/login/forget_password.html
@@ -89,6 +89,11 @@
 					var sendButton = doc.getElementById('sendMail');
 					var emailBox = doc.getElementById('email');
 					emailBox.value = plus.webview.currentWebview().email;
+					var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
+					if (emailBox.value.trim() == "" || !reg.test(emailBox.value.trim())) {
+						plus.nativeUI.toast(TextMessage.email_error1);
+						return;
+					}
 					sendButton.addEventListener('tap', function() {
 						var waiting = plus.nativeUI.showWaiting();
 						var params = {
@@ -117,7 +122,7 @@
 									switch(value) {
 										case "1002":
 											if(key == Api.Params.email) {
-												mui.toast("E-Mail" + TextMessage.errorCode_1002, {
+												mui.toast(TextMessage.email_error1, {
 													duration: 'long',
 													type: 'div'
 												})
