--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -111,12 +111,12 @@
 	</body>
 	<script src="../../../js/mui.min.js"></script>
 	<script src="../../../js/mui.view.js "></script>
+	<script src="../../../js/common.js"></script>
 	<script src="../../../js/mui.picker.js"></script>
-	<script src="../../../js/mui.poppicker.js"></script>
+	<script src="../../../js/picker/mui.poppicker.js"></script>
 	<script src="../../../js/jquery-3.2.0.min.js"></script>
 	<script src="../../../js/language.js"></script>
 	<script src="../../../js/sha256.js"></script>
-	<script src="../../../js/common.js"></script>
 	<script src="../../../js/pro_uploadimg.js"></script>
 	<script>
 	$(function() {
@@ -223,16 +223,6 @@
 								mui.openWindow({
 									id: 'login',
 									url:"../../login/login.html"
-								});
-							}
-							if(data == "3020") {
-								mui.toast(TextMessage.input_email, {
-									duration: 'long',
-									type: 'div'
-								});
-								mui.openWindow({
-									id: 'emai_summate',
-									url:"../../login/emai_summate.html"
 								});
 							}
 							if(data=="2002"){
