--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -222,6 +222,12 @@
 					var loginBtn = doc.getElementById('login');
 					loginBtn.addEventListener('tap', function(event) {
 						console.log("click login btn");
+						var email = doc.getElementById('email').value.trim();
+						var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
+						if (email == "" || !reg.test(email)) {
+							plus.nativeUI.toast(TextMessage.email_error1);
+							return;
+						}
 						var waiting = plus.nativeUI.showWaiting();
 						var params = {};
 						params[Api.Params.loginType] = LOGIN_TYPE.EMAIL;
