--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -262,6 +262,11 @@
 							plus.nativeUI.toast(TextMessage.emailnull);
 							return;
 						}
+						var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
+						if (!reg.test(email)) {
+							plus.nativeUI.toast(TextMessage.email_error1);
+							return;
+						}
 						var username = doc.getElementById('username').value.trim();
 						if (username == "") {
 							plus.nativeUI.toast(TextMessage.username_null);
