--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -28,7 +28,7 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>
 			<h1 class="mui-title lang" data-locale="requesttitle"></h1>
 			<div id="history">
-				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right jiaoyihitext"><span style="font-size: 14px;">交易履历</span></a>
+				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right jiaoyihitext"><span style="font-size: 14px;" class="lang" data-locale="thistorytext"></span></a>
 			</div>
 		</header>
 		<div class="mui-content">
