--- a/kankan/pages/main/news.html
+++ b/kankan/pages/main/news.html
@@ -56,16 +56,17 @@
 			    pullRefresh: 
 			    {
 			      container: '#pullrefresh',
-			      down: {
-			        callback: pullupRefresh
-			      },
 			      up: {
 			        contentrefresh: TextMessage.loading,
 			        contentnomore:TextMessage.nomore,
 			        contentinit: TextMessage.upmore,
 			        contentdown:TextMessage.upmore,
 			        callback: pullupRefresh
-			      }
+			      },
+			      down : {
+				      	contentrefresh: TextMessage.loading,
+					    callback :downRefresh 
+			    	}
 			    },
 			    beforeback: function() {
 			        var homePage = plus.webview.getWebviewById('pullrefresh_with_tab');
@@ -137,53 +138,34 @@
 				page=page+1;
 				//$(".mui-pull-caption-down").hide();
 			}
-		  //load
-		  function pullupRefresh() 
-		  {
+		  //up
+		  function pullupRefresh(){
 		  	getmessage(page);
-			//get message
-			function getmessage(page){
-			  	mui.plusReady(function() {
-				  	var params2={};
-					if(max!=null){
-						params2.max=max;
-					}
-					if(page!=null){
-						params2.page=page;
-					}
-					Repository.User.get_message(params2, {
-						ok: function(data) {
-							console.log(data);
-							showmessage(data);
-						},
-						ng: function(data) {
-							/*console.log(data);
-							if(data=="1000"){
-								mui.toast(TextMessage.test, {
-									duration: 'long',
-									type: 'div'
-								})
-							}*/
-							Api.callback_ng(data);
-						},
-					});
+		  }   
+		  function downRefresh(){
+		  		mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
+		  }
+		  //get message
+		function getmessage(page){
+		  	mui.plusReady(function() {
+			  	var params2={};
+				if(max!=null){
+					params2.max=max;
+				}
+				if(page!=null){
+					params2.page=page;
+				}
+				Repository.User.get_message(params2, {
+					ok: function(data) {
+						console.log(data);
+						showmessage(data);
+					},
+					ng: function(data) {
+						Api.callback_ng(data);
+					},
 				});
-			}
-			
-//		    setTimeout(function() {
-//		      mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > 2)); //参数为true代表没有更多数据了。
-//		      var table = document.body.querySelector('.messagelist');
-//		      var cells = document.body.querySelectorAll('.newsb');
-//		      
-//		      for (var i = cells.length, len = i + 5; i < len; i++) {
-//		        var div = document.createElement('div');
-//		        div.className = 'newsb';
-//		        div.innerHTML = '<div class="message">你有新的短消息，请查看请查看请查看请查看查看<div class="newsbox"> <img src="../../images/clear.png"  width="25" height="25"/></div></div><div class="lines"></div>';
-//		        table.appendChild(div);
-//		      }
-//		      
-//		    }, 1500);
-		  }    
+			});
+		}
 		 if (mui.os.plus) {
 		    mui.plusReady(function() {
 		      setTimeout(function() {
