--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -27,6 +27,13 @@
 		        background-color:#fff;
 		        z-index:1;
 		    }
+		     .input-top{
+		        position:fixed;
+		        top:0px;
+		        left:0px;
+		        width:100%;
+		        z-index:1;
+		    }
 		</style>
 	</head>
 	<body>
