--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -453,6 +453,13 @@ function publishs() {
 		document.publishcomodity.comm_name.focus();
 		return false;
 	}
+	if(comm_name.length>40){
+		mui.toast(TextMessage.TextMessage.pro_namelength, {
+			duration: 'long',
+			type: 'div'
+		});
+		return false;
+	}
 	if(comm_detail== "") {
 		mui.toast(TextMessage.pro_descriptiontest, {
 			duration: 'long',
@@ -460,6 +467,12 @@ function publishs() {
 		});
 		document.publishcomodity.comm_detail.focus();
 		return false;
+	}
+	if(comm_detail.length >1000) {
+		mui.toast(TextMessage.TextMessage.pro_detaillength, {
+			duration: 'long',
+			type: 'div'
+		});
 	}
 	if(classify_id == "") {
 		mui.toast(TextMessage.pro_sorttest, {
