--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -17,7 +17,7 @@
 				background-color: #efeff4;
 			}
 			.pimgbox{
-				width:113px;max-height:76px;text-align:center;border:1px solid #ffffff;overflow:hidden;
+				width:100%;height:76px;text-align:center;border:1px solid #ffffff;overflow:hidden;
 			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="../../../css/feedback.css" />
@@ -552,7 +552,7 @@
 				var realheight=exhibit_commdata[ex].comm_img_height;
 				var oribi=realheight/realwidth;
 				var showheight=imgwidth*oribi;
-				var cha1=showheight-72;
+				var cha1=showheight-76;
 				if(cha1>0){
 					toppx=cha1/2;
 				}else{
@@ -561,7 +561,7 @@
 				
 				exhibit_html+='<li class="user-goods-grid codedite">';
 				exhibit_html+='<a id="'+commexid+'" href="#">';
-				exhibit_html+='<div class="pimgbox"><img style="width: 95%;margin-top:-'+toppx+'px;" src="'+commeximg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
+				exhibit_html+='<div class="pimgbox"><img style="width: 100%;margin-top:-'+toppx+'px;" src="'+commeximg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 				exhibit_html+='</a>';
 				exhibit_html+='</li>';
 				var yunum=k%6;
@@ -586,7 +586,7 @@
 				var realheightpra=praise_commdata[pi].comm_img_height;
 				var oribipra=realheightpra/realwidthpra;
 				var showheightpra=oribipra*imgwidth;
-				var cha2=showheightpra-72;
+				var cha2=showheightpra-76;
 				if(cha2>0){
 					toppxpra=cha2/2;
 				}else{
@@ -594,7 +594,7 @@
 				}
 				praise_html+='<li class="user-goods-grid detail">';
 				praise_html+='<a id="'+praisepid+'" href="#">';
-				praise_html+='<div class="pimgbox"><img style="width: 95%;margin-top:-'+toppxpra+'px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
+				praise_html+='<div class="pimgbox"><img style="width: 100%;margin-top:-'+toppxpra+'px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 				praise_html+='</a>';
 				praise_html+='</li>';
 				var kiunum=ki%6;
