--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -87,6 +87,22 @@
 					var emailBox = doc.getElementById('email');
 					sendButton.addEventListener('tap', function() {
 						var waiting = plus.nativeUI.showWaiting();
+						if(doc.getElementById('password').value.trim()==""){
+							mui.toast(TextMessage.password_notnull, {
+								duration: 'long',
+								type: 'div'
+							});
+							waiting.close();
+							return false;
+						}
+						if(doc.getElementById('ver_code').value.trim()==""){
+							mui.toast(TextMessage.codenull, {
+								duration: 'long',
+								type: 'div'
+							});
+							waiting.close();
+							return false;
+						}
 						var params = {
 							email: email,
 							pwd_flg: "modify",
@@ -107,7 +123,14 @@
 								}, 500);
 							},
 							ng: function(data) {
+//								if(data == "2014") {
+//									mui.toast(TextMessage.confirmcodeng, {
+//										duration: 'long',
+//										type: 'div'
+//									});
+//								}
 								waiting.close();
+								Api.callback_ng(data);
 							},
 							error: function(){
 								waiting.close();
