--- a/kankan/pages/login/forget_password.html
+++ b/kankan/pages/login/forget_password.html
@@ -55,13 +55,17 @@
 				display: block;
 				padding: 12px;
 			}
+			.mui-icon-clear{
+				margin-top:-0.5em;
+			}
 		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
-			<a class="lang" data-locale="back"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav">
+				<a class="lang" data-locale="back"></a>
+			</a>
 			<h1 class="mui-title lang" data-locale="retrieve_password"></h1>
 		</header>
 		<div class="mui-content">
@@ -90,11 +94,16 @@
 					var emailBox = doc.getElementById('email');
 					emailBox.value = plus.webview.currentWebview().email;
 					var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
-					if (emailBox.value.trim() == "" || !reg.test(emailBox.value.trim())) {
-						plus.nativeUI.toast(TextMessage.email_error1);
-						return;
-					}
+					
 					sendButton.addEventListener('tap', function() {
+						if(emailBox.value.trim()==""){
+							plus.nativeUI.toast(TextMessage.emailnull);
+							return;
+						}
+						if (!reg.test(emailBox.value)) {
+							plus.nativeUI.toast(TextMessage.email_error1);
+							return;
+						}
 						var waiting = plus.nativeUI.showWaiting();
 						var params = {
 							pwd_flg: "verification",
@@ -118,6 +127,8 @@
 							},
 							ng: function(data) {
 								waiting.close();
+								Api.callback_ng(data);
+								return false;
 								$.each(data, function(key, value) {
 									switch(value) {
 										case "1002":
@@ -134,6 +145,18 @@
 								});
 								if(data == "2010") {
 									mui.toast(TextMessage.not_exist_email, {
+										duration: 'long',
+										type: 'div'
+									})
+								}
+								if(data == "1001") {
+									mui.toast(TextMessage.errorCode_1001, {
+										duration: 'long',
+										type: 'div'
+									})
+								}
+								if(data == "5001") {
+									mui.toast(TextMessage.emailsenderror, {
 										duration: 'long',
 										type: 'div'
 									})
