--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -171,7 +171,7 @@
 											});
 											if(data.email == "") {
 												plus.nativeUI.alert(TextMessage.input_email, function(event) {
-													mui.back();
+													//mui.back();
 													mui.openWindow({
 														id: "emai_summate",
 														url: "emai_summate.html",
@@ -195,7 +195,6 @@
 										}
 									});
 								}, function(e) {
-									alert("eee");
 								});
 							}, function(e) {
 								var description = "";
